# Legal-Eagle-Ultimate

./: .gitignore  README.md  app.py  pyproject.toml  startup_fixes.py
.streamlit/: config.toml
agents/: __init__.py  conversational_rag.py  document_analyzer.py  legal_advice_agent.py  legal_researcher.py  orchestrator.py  outcome_predictor.py  risk_assessor.py  statute_identifier.py  summary_generator.py
config/: __init__.py  settings.py
data/: indian_statutes.json
data/vector_store/: legal_index.faiss  metadata.pkl
models/: __init__.py  indian_legal_db.py  inlegal_bert_wrapper.py
services/: __init__.py  compliance_checker.py  live_intelligence.py
utils/: __init__.py  conversation_memory.py  document_processor.py  embeddings.py  security.py
